--- a/index.html
+++ b/index.html
@@ -167,24 +167,24 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
                     <!-- Tarjeta de Imagen 1 -->
-                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png">
-                        <img src="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png" alt="Render Sala de Baño" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala De Baño</h3><p class="text-gray-400 text-sm">Baño De Penthouse.</p></div>
+                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/dQxxnkRd/Whats-App-Image-2026-01-13-at-11-25-51-AM.jpg">
+                        <img src="https://i.postimg.cc/dQxxnkRd/Whats-App-Image-2026-01-13-at-11-25-51-AM.jpg" alt="Render Sala de Baño" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Render De Cocina Moderna</h3><p class="text-gray-400 text-sm">Diseño De Cocina Moderna.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 2 -->
-                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/TwwYNL1S/casa-port-ps-01.jpg">
-                        <img src="https://i.postimg.cc/TwwYNL1S/casa-port-ps-01.jpg" alt="Render de fachada de casa" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Fachada Iluminada</h3><p class="text-gray-400 text-sm">Diseño de exterior con iluminación nocturna.</p></div>
+                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/mZwQ2QqP/Whats-App-Image-2026-01-13-at-10-53-36-AM.jpg">
+                        <img src="https://i.postimg.cc/mZwQ2QqP/Whats-App-Image-2026-01-13-at-10-53-36-AM.jpg" alt="Render de Habitacion Principal" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Habitacion Principal</h3><p class="text-gray-400 text-sm">Diseño de Habitacion Principal.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 3 -->
-                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/7PtYzStv/Escena-3ps01.png">
-                        <img src="https://i.postimg.cc/7PtYzStv/Escena-3ps01.png" alt="Render de Sala de estar" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala Estilo Contemporáneo</h3><p class="text-gray-400 text-sm">Diseño de interiores .</p></div>
+                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png">
+                        <img src="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png" alt="Render de Sala De Bañor" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala De Baño</h3><p class="text-gray-400 text-sm">Diseño de interiores .</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 4 -->
-                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/mZwQ2QqP/Whats-App-Image-2026-01-13-at-10-53-36-AM.jpg">
-                        <img src="https://i.postimg.cc/mZwQ2QqP/Whats-App-Image-2026-01-13-at-10-53-36-AM.jpg" alt="Render de sala de estar" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala de Estar</h3><p class="text-gray-400 text-sm">Visualización de espacio interior con luz natural.</p></div>
+                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/7PtYzStv/Escena-3ps01.png">
+                        <img src="https://i.postimg.cc/7PtYzStv/Escena-3ps01.png" alt="Render de sala de estar" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala Estilo Contemporáneo</h3><p class="text-gray-400 text-sm">Diseño de interiores.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 5 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/8zm6qvkP/comedor-03-port-ps.jpg">
@@ -192,9 +192,9 @@
                         <div class="p-6"><h3 class="text-xl font-bold mb-2">Espacio Abierto</h3><p class="text-gray-400 text-sm">Concepto de comedor y cocina integrados.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 6 -->
-                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/GpMsp1sW/supermercado-port-ps.jpg">
-                        <img src="https://i.postimg.cc/GpMsp1sW/supermercado-port-ps.jpg" alt="Render de interior de supermercado" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Proyecto Comercial</h3><p class="text-gray-400 text-sm">Visualización de interior para supermercado.</p></div>
+                    <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/TwwYNL1S/casa-port-ps-01.jpg"">
+                        <img src="https://i.postimg.cc/TwwYNL1S/casa-port-ps-01.jpg"" alt="Render de fachada de casa" class="w-full h-48 object-cover">
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Fachada Iluminada</h3><p class="text-gray-400 text-sm">Diseño de exterior con iluminación nocturna.</p></div>
                     </div>
                 </div>
             </section>
@@ -381,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
