--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <!-- Tarjeta de Imagen 3 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png">
                         <img src="https://i.postimg.cc/tTLv0SC0/Escena-1-9-ps.png" alt="Render de Sala De Bañor" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala De Baño</h3><p class="text-gray-400 text-sm">Diseño de interiores .</p></div>
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Sala De Baño</h3><p class="text-gray-400 text-sm">Diseño de baño moderno.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 4 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/7PtYzStv/Escena-3ps01.png">
@@ -381,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
