--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <!-- Tarjeta de Imagen 5 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/8zm6qvkP/comedor-03-port-ps.jpg">
                         <img src="https://i.postimg.cc/8zm6qvkP/comedor-03-port-ps.jpg" alt="Render de comedor con cocina integrada" class="w-full h-48 object-cover">
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Espacio Abierto</h3><p class="text-gray-400 text-sm">Concepto de comedor y cocina integrados.</p></div>
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Diseño De Comedor</h3><p class="text-gray-400 text-sm">Render de comedor moderno.</p></div>
                     </div>
                     <!-- Tarjeta de Imagen 6 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in" data-type="image" data-source="https://i.postimg.cc/TwwYNL1S/casa-port-ps-01.jpg"">
@@ -381,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
