--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                     </div>
                     <!-- Tarjeta de Video 5 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in relative" data-type="video" data-source="https://player.vimeo.com/video/1135052941">
-                        <img src="https://i.postimg.cc/G3TgdCyS/Secuencia-01-00-00-00-00-Imagen-fija001.png" alt="Video de Proyecto Los Samanes" class="w-full h-48 object-cover">
+                        <img src="https://i.postimg.cc/G3TgdCyS/Secuencia-01-00-00-00-00-Imagen-fija001.png" alt="Video de Urb. Cedro" class="w-full h-48 object-cover">
                         <div class="video-overlay"><i data-lucide="play-circle" class="w-16 h-16 text-white"></i></div>
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Proyecto Los Samanes</h3><p class="text-gray-400 text-sm">Recorrido completo del proyecto residencial.</p></div>
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Proyecto Urb. Cedros </h3><p class="text-gray-400 text-sm">Recorrido completo del proyecto residencial.</p></div>
                     </div>
                     <!-- Tarjeta de Video 6 -->
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in relative" data-type="video" data-source="https://player.vimeo.com/video/1108510989">
@@ -381,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
