--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="portfolio-card bg-gray-800 rounded-lg overflow-hidden fade-in relative" data-type="video" data-source="https://player.vimeo.com/video/1108510989">
                         <img src="https://i.postimg.cc/qvSPHN1S/image.png" alt="Video de Casa Las Salinas" class="w-full h-48 object-cover">
                         <div class="video-overlay"><i data-lucide="play-circle" class="w-16 h-16 text-white"></i></div>
-                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Casa Las Salinas</h3><p class="text-gray-400 text-sm">Animación de un proyecto de casa de playa.</p></div>
+                        <div class="p-6"><h3 class="text-xl font-bold mb-2">Fachada Iluminada</h3><p class="text-gray-400 text-sm">Animación de exterior con iluminación nocturna.</p></div>
                     </div>
                 </div>
             </section>
@@ -381,6 +381,7 @@
     </script>
 </body>
 </html>
+
 
 
 
